--- a/about.html
+++ b/about.html
@@ -29,7 +29,8 @@
             <br>   
              <!-- <p><strong>ABOUT</strong></p> -->     
             <p><strong>HARA SHIN (신하라/申荷羅)</strong></p>
-            <p>Hara Shin (b. 1987 in Seoul) is an artist based in Berlin and mainly works with video and installation. She explores expanded visibility and perception of distance through technical media-based observation and alternative sensory experience between virtual and physical materialities. She graduated in Fine Arts at the Hongik University in Seoul (BFA) and studied Art and Image History at the Humboldt University of Berlin (exchange program, MA). She is currently studying Art and Media at the Berlin University of the Arts (Meisterschülerin, Experimental Film & Media Art class with Prof. Nina Fischer).  </p>
+            <p>Hara Shin (b. 1987 in Seoul, lives and works in Berlin) is interested in alternative experiences, sensory perception of distances and movements of various (im)material properties, and imaginaries arising from media-based observation and temporal context. The structure of image circulation and the flowing path of visibility are multi-layered in a space that presents hypotheses, in or out of a digital environment. Cognitive space and real space react to each other’s absences, influence the sphere of action, and present the possibility of drifting in space. Leaving behind the concept of the modernity of human-centered thinking and the future illusion of advanced humanity, She explores relationships and traces of natural life and artificiality from a fragmented perspective. The interconnections between objects and their surroundings over time change between their death and disappearance, and recurrent existential values. 
+            She graduated as Meisterschülerin of Nina Fischer in Experimental Film & Media Art class at the University of Arts Berlin.  </p>
             <br>
             _
             <br>
@@ -37,16 +38,18 @@
             <br>
             _
             <br>
-            <p>Article/ Interview/ Online Catalogue</p>
+            <p>Press/ Publications</p>
             <br> 
-            <p>Exhibition Catalogue : EMAF (European Media Art Festival) No.33 First Person Plural, 2020</p>
-            <p><a href="http://www.horstundedeltraut.com/invisible-immaterial-intangible/" target="_blank"><u>Interview : Horst und Edeltraut, 2019</u></a></p>
+            <p>Exhibition Catalogue: EMAF (European Media Art Festival) No.33 First Person Plural, 2020</p>
+            <p><a href="http://www.horstundedeltraut.com/invisible-immaterial-intangible/" target="_blank"><u>Interview: Horst und Edeltraut, 2019</u></a></p>
             <p><a href="https://www.udk-berlin.de/service/stabsstelle-presse-kommunikation/das-journal-der-udk-berlin/journal-7-wiederholung/" target="_blank"><u>Das Journal der UdK Berlin, 2019</u></a></p>
-            <p><a href="https://www.rnz.de/nachrichten/wiesloch_artikel,-sap-kunstausstellung-walldorf-die-grosse-sehnsucht-und-freiheit-junger-kuenstler-_arid,396742.html" target="_blank"><u>Rhein-Neckar-Zeitung, 2018</u></a></p>
-            <p><a href="https://i-d.vice.com/de/article/9k7p9v/young-talents-ausstellung-udk-berlin?utm_source=idfbde&utm_medium=link" target="_blank"><u>Interview : i-D germany, 2018</u></a></p>
-            <p>SAP, 2018</p>
-            <p>NeoAvantgarde, 2017</p>
-            <p>Exhibition Catalogue : Post Internet Show, 2017</p>
+            <p>Exhibition Catalogue: KUNSTRAUM studierendenWERK BERLIN #1, 2019</p>
+            <p><a href="https://www.rnz.de/nachrichten/wiesloch_artikel,-sap-kunstausstellung-walldorf-die-grosse-sehnsucht-und-freiheit-junger-kuenstler-_arid,396742.html" target="_blank"><u>Press: Rhein-Neckar-Zeitung, 2018</u></a></p>
+            <p><a href="https://i-d.vice.com/de/article/9k7p9v/young-talents-ausstellung-udk-berlin?utm_source=idfbde&utm_medium=link" target="_blank"><u>Interview: i-D germany, 2018</u></a></p>
+            <p>Press: SAP, 2018</p>
+            <p>Exhibition Magazine: Examining the Edge - peripheries in the mind and the city & mind wandering and boredom in the arts</p>
+            <p>Exhibition Review, Online Magazine: NeoAvantgarde, 2017</p>
+            <p>Exhibition Catalogue: Post Internet Show, 2017</p>
             _
             <br>
         </div>
