--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <p><a href="https://www.rnz.de/nachrichten/wiesloch_artikel,-sap-kunstausstellung-walldorf-die-grosse-sehnsucht-und-freiheit-junger-kuenstler-_arid,396742.html" target="_blank"><u>Press: Rhein-Neckar-Zeitung, 2018</u></a></p>
             <p><a href="https://i-d.vice.com/de/article/9k7p9v/young-talents-ausstellung-udk-berlin?utm_source=idfbde&utm_medium=link" target="_blank"><u>Interview: i-D germany, 2018</u></a></p>
             <p>Press: SAP, 2018</p>
-            <p>Exhibition Magazine: Examining the Edge - peripheries in the mind and the city & mind wandering and boredom in the arts</p>
+            <p>Exhibition Magazine: Examining the Edge - peripheries in the mind and the city & mind wandering and boredom in the arts, 2018</p>
             <p>Exhibition Review, Online Magazine: NeoAvantgarde, 2017</p>
             <p>Exhibition Catalogue: Post Internet Show, 2017</p>
             _
