--- a/speculativeatlas.html
+++ b/speculativeatlas.html
@@ -23,19 +23,26 @@
             <br>
             <br>
             <div class="imageContainer">
-                <img src="speculativeatlasstill.jpg" width="650px">
+                <img src="Hakgojae Design PROJECT SPACE Installation view_01.jpg" width="1000px">
             </div>
             <p><strong><i>SPECULATIVE ATLAS</i></strong></p>
             <p>3 channel video, HD, color, stereo, 2020</p>
-            <p>channel 1_Ellipse and Grid, 3'00" <a href="https://vimeo.com/449163302 " target="_blank"><u>https://vimeo.com/449163302 </u></a> </p>
-            <p>channel 2_Spiral Horn and Crystal, 3'15" <a href="https://vimeo.com/449165936 " target="_blank"><u>https://vimeo.com/449165936  </u></a> </p>
-            <p>channel 1_3_Map of the Image, 3'30" <a href="https://vimeo.com/449490158" target="_blank"><u>https://vimeo.com/449490158   </u></a> </p>
+            <p>channel 1_Ellipse and Grid, 3'00" </p>
+            <p>channel 2_Spiral Horn and Crystal, 3'15" </p>
+            <p>channel 1_3_Map of the Image, 3'30" </p>
             <p>single-channel version, 9'00" <a href="https://vimeo.com/449725474  " target="_blank"><u>https://vimeo.com/449725474  </u></a> </p>
-            <p>photo_video stills</p>
+            <p>photo: installation view, Hakgojae Design Project Space, 2020</p>
             <br>
+            
+            <p> _Speculative Atlas is a video essay on speculation about nature as it relates to media. It deals with how images, objects, landscapes, and data around both natural and artificial objects are stuffed and reproduced in digital space to create fluid specimens—as well as how the ways in which they are collected, displayed, and appreciated form connections between Cabinets of Curiosities in the past and Data Mining in the present. Numerous interactions between the Internet and the real world represent a temporary cluster of fragmented images. They blend time and space on different levels, constantly transforming and expanding. The scattered paths and movements of images generate simultaneous visual stimuli and entropy of matter.
+            </p>
             <br>
-            <p> _Speculative Atlas is an unfolded and moving collection of images. This work deals with how images are collected and placed in digital space. It makes the possibility of the pseudo-archive and realizes intangible proximity and remoteness between virtual and physical materialities. The work reflects the ways of collection, display and aesthetic appreciation of images on the Cabinet of Curiosities that natural and artificial objects are displayed together with the aspiration about new experience and knowledge, and the substitute for imaginary experiences. Images in that form are found but reframed, realistic but fabricated, and public but private.</p>
-            <br>
+            <div class="imageContainer">
+                <img src="Hakgojae Design PROJECT SPACE Installation view_04.jpg" width="1000px">
+            </div>
+            <div class="imageContainer">
+                <img src="IMG_6298 copy.jpg" width="1000px">
+            </div>
         </div>
     </div>
     
