--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
             <br>
             <p>Press/ Publications</p>
             <br> 
+            <p>Exhibition Catalogue: Hakgojae Design Project Space 2019-2020, 2021</p>
             <p>Exhibition Catalogue: EMAF (European Media Art Festival) No.33 First Person Plural, 2020</p>
             <p><a href="http://www.horstundedeltraut.com/invisible-immaterial-intangible/" target="_blank"><u>Interview: Horst und Edeltraut, 2019</u></a></p>
             <p><a href="https://www.udk-berlin.de/service/stabsstelle-presse-kommunikation/das-journal-der-udk-berlin/journal-7-wiederholung/" target="_blank"><u>Das Journal der UdK Berlin, 2019</u></a></p>
