--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         
     <div id="grid">
         <div>
-            <h4><a href="news.html"> NEWS</a></h4>
+            <!-- <h4><a href="news.html"> NEWS</a></h4>
             <h4><a href="works.html"> WORKS</a></h4>
             <h4><a href="about.html"> ABOUT</a></h4> 
-            <h4><a href="contact.html"> CONTACT</a></h4>
+            <h4><a href="contact.html"> CONTACT</a></h4> -->
         </div>    
          <div>
+            <h4><a href="https://indd.adobe.com/view/d00bb7b5-4a03-4325-88a7-4ae4c9863ed5 "> LINK TO PORTFOLIO 2021</a></h4>
             <img src="webbg.jpg" width="100%">
         </div>
     </div>
